Little changes in multiple repositories and a new task called jaror